# ylab-edge-go

./: .gitignore  Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  ylab.rs
src/ylab/: mod.rs  ysns.rs  ytf.rs  ytfk.rs  yuii.rs  yuio.rs
uf2/: ylab_dg.uf2  ylab_motion.uf2  ylab_stress.uf2
workflow/: read_serial.py
