[package]
edition = "2021"
name = "ylab-edge-go"
version = "0.3.0"
license = "MIT OR Apache-2.0"
resolver = "2"

[lib]
name = "ylab"
path = "src/ylab/mod.rs"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.1.0" }

embassy-rp = { version = "0.1.0", features = ["defmt", "time-driver", "critical-section-impl"] }
log = "0.4"

static_cell = "1.3.0"
fixed = "1.23.1"
fixed-macro = "1.2.0"
smart-leds = "0.4.0"
embedded-hal = {version = "1.0.0"}
lsm6ds33 = "0.5.0"
ads1x1x = "0.2.2"
#embedded-ads111x = "0.1.1"
ssd1306 = "0.8.0"
embedded-graphics = "0.8.0"
itoa = "1.0.9"
heapless = "0.8.0"
nb = "1.1.0"
bmi160 = "1.0.0"
# bmi160 = {path = "../bmi160-async"}
mlx9061x = "0.2.1"
scd4x = { version = "0.3.0", default-features=false, features = ["scd41"] }
max3010x = {version = "0.1.0", default-features=false}
lsm6dsox = "1.0.1"
xca9548a = "0.2.1"
#mpu6886 = "0.1.0"
#embedded-io = "0.6.1"
#embedded-hal-async = "1.0.0"
#embedded-hal-compat = "0.12.0"
mpu6886 = { path = "../mpu6886" }

## network drivers for cyw43 (pico W) or wiznet w5500
# embassy-net = { version = "0.1.0", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
# embassy-net-driver-channel = { version = "0.1.0"}
# embassy-net-w5500 = { version = "0.1.0", features = ["defmt"] }
# cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
# cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

[patch.crates-io]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'

